@@ -187,7 +187,9 @@ public class ContextFactory implements ObjectFactory
         Reference ref = (Reference)obj;
         StringRefAddr parserAddr = (StringRefAddr)ref.get("parser");
         String parserClassName = (parserAddr==null?null:(String)parserAddr.getContent());
-        NameParser parser = (NameParser)(parserClassName==null?null:loader.loadClass(parserClassName).newInstance());
+        NameParser parser =
+            (NameParser)(parserClassName==null?
+                null:loader.loadClass(parserClassName).getDeclaredConstructor().newInstance());
 
         return new NamingContext (env,
                                   name.get(0),
